--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -319,7 +319,7 @@ a {
   align-items: center;
 }
 
-.js-scroll-trigger{
+.masthead_scroll_trigger{
   border: none;
   border-radius: 40px;
   width: 50px;
