--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -169,7 +169,7 @@ header.masthead {
     .portfolio {
       margin-bottom: -30px; }
       .portfolio .portfolio-item {
-        margin-bottom: 30px; } }
+        margin-bottom: 10px; } }
 
 .portfolio-modal .portfolio-modal-dialog {
   padding: 3rem 1rem;
@@ -329,6 +329,7 @@ a {
 }
 .social_media_btn{
   background-color: #2c3e4e;
+  box-shadow: 3px 5px 18px #888888;
 }
 
 .modal_button_container{
@@ -351,5 +352,12 @@ a {
   flex-direction: column;
 }
 .portfolio_btn_container{
+  display: flex;
+  justify-content: space-between;
   flex-direction: row;
+  margin: 0;
+}
+.project_img{
+  border-radius: 10px;
+   box-shadow: 3px 5px 18px #888888;
 }
